--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "expo": "^33.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
